--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <title>Dasmoto's Arts and Crafts</title>
 </head>
 <body>
-    
+
+    <header>
+        <h1>Dasmoto's Arts & Crafts</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>Brushes</h2>
+            <figure>
+                <img src="./images/hacksaw.webp">
+                <figcaption>Hacksaw Brushes</figcaption>
+            </figure>
+            <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span>Starting at $3.00 / brush.</span></p>
+        </section>
+        <section>
+            <h2>Frames</h2>
+            <figure>
+                <img src="./images/frames.webp">
+                <figcaption>Art Frames (assorted)</figcaption>
+            </figure>
+            <p>Assorted frames made of different material, including MDF, birchwood and PDE. Select frames can be sanded and painted according to your needs. <span>Starting at $2.00 / frame.</span></p>
+        </section>
+        <section>
+            <h2>Paint</h2>
+            <figure>
+                <img src="./images/finnish.jpeg">
+                <figcaption>Clean Finnish Paint</figcaption>
+            </figure>
+            <p>Imported paint from Finland. Over 256 colors are available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span>Starting at $5.00 / tube.</span></p>
+        </section>
+    </main>
+
 </body>
 </html>
